<resources>
    <string name="app_name">熊猫频道</string>
    //个人中心的String
    <string name="personalCenter">个人中心</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="personalCenter_Signin">点击登录</string>
    <string name="personalCenter_History">观看历史</string>
    <string name="personalCenter_Collection">我的收藏</string>
    <string name="personalCenter_set">设置</string>
    <string name="Login">登录</string>
    <string name="register">注册</string>
    <string name="login_weinxin">微信</string>
    <string name="login_qq">QQ</string>
    <string name="p">温宇航</string>
    <string name="login_sina">微博</string>
    <string name="login_tips">使用社交账号登录到熊猫频道</string>
    <string name="login_cntv">CNTV通行证</string>
    <string name="login_forgetpaswd">忘记密码?</string>
    <string name="login_account_hint">账号：请输入邮箱或手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="panda_live">熊猫直播</string>
    <string name="brief_introduction">简介</string>
    <string name="live_china">直播中国</string>
    <string name="panda_broadcast">熊猫观察</string>
    <string name="roll_video">熊猫文化</string>
    <string name="photochoose">从手机相册选择</string>
    <string name="takephoto">拍一张</string>
    <string name="cancel">取消</string>
    <!--忘记密码-->
    <string name="forget_pasword">忘记密码</string>
    <string name="forget_found_pswd">找回密码</string>
    <string name="forget_tips">只支持手机号注册用户找回密码</string>
    <string name="forget_account_hint">请输入注册时的手机号</string>
    <string name="forget_img_yanzhengma_hint">请输入图片验证码</string>
    <string name="forget_phone_yanzhengma_hint">请输入收到的验证码</string>
    <string name="forget_set_newpaswd_hint">请设置新密码</string>
    <string name="forget_image_yanzhengma">图形验证码</string>
    <string name="regist_yanzhengma">获取验证码</string>
    <!--设置-->
    <string name="quxiao">取消</string>
    <string name="shouchang">收藏</string>
    <string name="lisi">历史记录</string>
    <string name="bianji">编辑</string>
    <string name="phone">手机注册</string>
    <string name="mailbox">邮箱注册</string>
    <string name="queding">确定</string>
    <string name="set">设置</string>
    <string name="set_general">常用功能</string>
    <string name="set_push">是否接受消息推送</string>
    <string name="set_play_next">自动播放下一集</string>
    <string name="set_clear_cash">清除缓存</string>
    <string name="set_other">其他</string>
    <string name="set_userbackandhelp">用户反馈及帮助</string>
    <string name="set_language">语言</string>
    <string name="set_language_chinese">简体中文</string>
    <string name="set_language_english">English</string>
    <string name="set_language_system">系统</string>
    <string name="set_check_update">检测升级</string>
    <string name="set_check_newversion">已检测到新版本，是否升级？</string>
    <string name="set_confirm_clear_cache">确认清除缓存吗?</string>
    <string name="set_push_tips">推送提示</string>
    <string name="set_is_open_push">是否开启推送？</string>
    <string name="set_great">喜欢我们,给我好评</string>
    <string name="set_about_panda">关于熊猫频道</string>
    <string name="set_back_title">用户反馈</string>
    <string name="set_back_myquestion">遇到的问题</string>
    <string name="set_back_commonquestion">常见问题</string>
    <string name="set_back_email">请输入您的邮箱，方便我们及时给您回复</string>
    <string name="set_back_commit">提交</string>
    <string name="set_back_liulan">请留下您的宝贵意见</string>
    <string name="set_back_question1">功能异常</string>
    <string name="set_back_question2">内容问题</string>
    <string name="set_back_question3">界面优化</string>
    <string name="set_back_question4">视频播放</string>
    <string name="set_back_question5">显示异常</string>
    <string name="set_back_question6">其他建议</string>
    <string name="set_about_version">熊猫频道V1.0.0</string>
    <string name="set_about_content">熊猫频道以24小时直播中国名山大川、自然风光以及熊猫、金丝猴等世界珍稀动物为特色，以CCTV电视节目资源为基础，旨在打造一个传播中国声音、讲好中国故事、展示中国文化独特魅力的中国频道，充分满足海外华人以及喜爱中国文化的外国人的需求，最终建成以视频为特色的中国互联网大百科。现阶段主要开设有《熊猫观察》、《熊猫直播》、《直播中国》、《熊猫文化》等特色栏目。</string>

    <!-- 修改昵称、头像 -->

    <string name="watchChat_editHint">添加评论. . .</string>
    <string name="send_edit">发送</string>


    <!--注册-->
    <string name="regist_phone">手机注册</string>
    <string name="regist_email">邮箱注册</string>
    <string name="regist_phone_tips">海外用户暂不支持手机号注册，您可以使用邮箱注册</string>
    <string name="regist_protorcal">我已阅读并同意《央视网网络服务使用协议》</string>
    <string name="regist_email_tips">邮箱注册需要激活后才能登录</string>
    <string name="regist_phone_account_hint">账号：请输入手机账号</string>
    <string name="regist_email_account_hint">账号：请输入邮箱</string>
    <string name="regist_phone_paswd_hint">请输入密码</string>
    <string name="regist_confirm_paswd">请确认密码</string>
    <string name="regist_sendmessage_again">重新获取</string>
    <string name="regist_tips">请输入手机号码</string>
    <string name="regist_error_tips">图片验证码输入有误</string>
    <string name="regist_nullphonenumber_tips">手机号码不能为空</string>
    <string name="regist_phone_reg_error">手机号格式不正确</string>
    <string name="regist_null_paswd_tips">密码不能为空</string>
    <string name="regist_null_comfirm_paswd">确认密码不能为空</string>
    <string name="regist_paswd_differ">密码不一致</string>
    <string name="regist_email_null">邮箱不能为空</string>
    <string name="regist_email_error">邮箱格式不正确</string>
    <string name="regist_paswd_reg">密码仅限6-16个字符</string>
    <string name="regist_yanzhengma_null">验证码不能为空</string>
    <string name="regist_yanzhengma_error">验证码不正确</string>
    <string name="regist_account_null">邮箱/手机号不能为空</string>
    <string name="regist_account_error">邮箱/手机格式不正确</string>
    <string name="regist_not_checked">未勾选《央视网网络服务使用协议》</string>
    <string name="regist_email_success">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>

    <string name="dialog_play">您正在使用移动数据网络，所产生的流量费用由当地运营商收取，是否继续?</string>




    <string name="problem1">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
    <string name="problem2">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
    <string name="problem3">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
    <string name="problem4">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
    <string name="problem5">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
    <string name="Answer1">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
    <string name="Answer2">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
    <string name="Answer3">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
    <string name="Answer4">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
    <string name="Answer5">请到您的邮箱激活账号后登录，是否现在去邮箱激活</string>
</resources>


