<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:padding="@dimen/x20"
        android:layout_height="@dimen/y80"
        android:text="@string/set_confirm_clear_cache"
        android:gravity="center"
        android:textSize="@dimen/x30"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/quxiao"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y80"
            android:text="@string/quxiao"
            android:textSize="@dimen/x30"
            android:gravity="center"/>
        <View
            android:layout_width="@dimen/x2"
            android:layout_height="match_parent"
            android:background="@color/black" >
        </View>
        <TextView
            android:id="@+id/queding"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y80"
            android:text="@string/queding"
            android:textSize="@dimen/x30"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>