<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/x10">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/myquestion_cb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_check"
                    android:drawablePadding="7dp"
                    android:text="@string/set_back_question1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/myquestion_cb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_check"
                    android:drawablePadding="7dp"
                    android:text="@string/set_back_question2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/myquestion_cb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_check"
                    android:drawablePadding="7dp"
                    android:text="@string/set_back_question3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/myquestion_cb4"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_check"
                    android:drawablePadding="7dp"
                    android:text="@string/set_back_question4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/myquestion_cb5"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_check"
                    android:drawablePadding="7dp"
                    android:text="@string/set_back_question5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/myquestion_cb6"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_check"
                    android:drawablePadding="7dp"
                    android:text="@string/set_back_question6" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/myquestion_content1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="top|left"
        android:hint="@string/set_back_liulan"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textCursorDrawable="@null"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/myquestion_contact2"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/set_back_email"
        android:paddingLeft="10dp"
        android:textCursorDrawable="@null"

        android:textSize="13sp" />


    <TextView
        android:id="@+id/myquestion_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="132px"
        android:layout_below="@id/myquestion_contact2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/pe_login_view_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/set_back_commit"
        android:textColor="@color/white" />


</LinearLayout>