<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pandas.personal.AboutActivity">


    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x150">
        <ImageButton
            android:layout_centerVertical="true"
            android:id="@+id/fanhui"
            android:layout_width="@dimen/x80"
            android:layout_height="wrap_content"
            android:background="@mipmap/fenlei_fanhui"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/x150"
            android:gravity="center"
            android:textSize="@dimen/x50"
            android:textColor="#ffffff"
            android:text="@string/set_about_panda"

            />

    </RelativeLayout>


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@mipmap/about_sign"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/set_about_version" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="5dp"
        android:lineSpacingMultiplier="1"
        android:padding="10dp"
        android:text="@string/set_about_content" />


</LinearLayout>
