<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x150">
        <ImageButton
            android:layout_centerVertical="true"
            android:id="@+id/fanhui"
            android:layout_width="@dimen/x80"
            android:layout_height="wrap_content"
            android:background="@mipmap/fenlei_fanhui"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/x150"
            android:gravity="center"
            android:textSize="@dimen/x50"
            android:textColor="#ffffff"
            android:text="@string/register"
            />

    </RelativeLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">

        <RadioButton
            android:id="@+id/phone"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y120"
            android:text="@string/phone"
            android:gravity="center"
            android:textSize="@dimen/x30"
            android:button="@null"
            android:checked="true"
            android:textColor="@color/pandalive_textchange"
            android:background="@drawable/pandalive_radio"
            />

        <View
            android:layout_width="@dimen/x2"
            android:layout_height="@dimen/y120"></View>

        <RadioButton
            android:id="@+id/mailbox"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y120"
            android:text="@string/mailbox"
            android:textColor="@color/pandalive_textchange"
            android:gravity="center"
            android:button="@null"
            android:textSize="@dimen/x31"
            android:background="@drawable/pandalive_radio"/>
    </RadioGroup>


    <FrameLayout
        android:id="@+id/fram"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

</LinearLayout>
